@@ -23,6 +23,8 @@ G Clinch
 Kees Boss
 Oisin Mulvihill
 Laszlo Krekacs - khiraly@gmail.com
+Stefan Schwarzer
+
 
 Erik gets a special mention for the contribution of the "Showcase".
 
